# reed-solomon-erasure

./: .gitignore  Cargo.toml  build.rs
src/: core.rs  lib.rs  macros.rs
