[package]
name= "solana-reed-solomon-erasure"
version = "4.0.1-3"
authors = ["Darren Ldl <darrenldldev@gmail.com>", "Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
build = "build.rs"
exclude = [
    "appveyor.yml",
    ".travis.yml"
]

description = "Rust implementation of Reed-Solomon erasure coding (Solana temporary fork)"

homepage= "https://github.com/solana-labs/reed-solomon-erasure"
repository= "https://github.com/solana-labs/reed-solomon-erasure"

readme= "README.md"

keywords= ["reed-solomon", "erasure"]

categories= ["encoding"]

license = "MIT"

[features]
default = [] # simd off by default
simd-accel = ["cc", "libc"]

[dependencies]
smallvec = "0.6"
libc = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.7.2"
quickcheck = "0.9"

[build-dependencies]
cc = { version = "1.0", optional = true }
